--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,8 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "flask>=3.1.0",
-    "kafka>=1.3.5",
+    "numpy>=2.2.5",
     "pilk>=0.2.4",
+    "pyav>=14.2.1",
     "requests>=2.32.3",
 ]
