--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,17 @@
-requests>=2.25.0
-typing>=3.7.4 
+blinker>=1.9.0
+certifi>=2025.1.31
+charset-normalizer>=3.4.1
+click>=8.1.8
+flask>=3.1.0
+idna>=3.10
+itsdangerous>=2.2.0
+jinja2>=3.1.6
+markupsafe>=3.0.2
+numpy>=2.2.5
 pilk>=0.2.4
-av>=14.2.1 
+qrcode>=8.1
+requests>=2.32.3
+typing>=3.10.0.0
+typing-extensions>=4.13.2
+urllib3>=2.4.0
+werkzeug>=3.1.3
