--- a/main_config_example.toml
+++ b/main_config_example.toml
@@ -10,9 +10,21 @@ callback_url = "http://your_domain_or_ip:5432/callback"
 app_id = "wx_12345ABCdeFGhi6789"
 # geweapi平台分配的token，私有化部署则为自己调用获取token接口获取的token。
 token = "1234abcd-1234-1234-1234-1234abcd1234"
-is_gewe = true                                 # 是否强制切换geweapi，设置为false则切换至私有化部署。
+# 是否强制切换geweapi，设置为false则切换至私有化部署。
+is_gewe = true
 
-[opengewe]
+[plugins]
 plugins_dir = "plugins"             # 插件目录
 enabled_plugins = ["ExamplePlugin"] # 启用的插件列表
 disabled_plugins = []               # 禁用的插件列表
+
+[queue]
+# 消息队列类型，可选值为"simple"或"advanced"。
+# 设为simple则使用asyncio消息队列，下面的设置则无效。
+# 设为advanced则使用celery消息队列，需要正确配置broker和backend等高级配置。
+queue_type = "simple"
+# 高级消息队列配置，仅当queue_type设为advanced时有效。
+broker = "redis://localhost:6379/0"  # 消息队列后端连接URI，可用redis或rabbitmq
+backend = "redis://localhost:6379/0" # 消息队列结果存储URI，可用redis或rabbitmq
+name = "opengewe_messages"           # 队列名称
+concurrency = 4                      # worker并发数量
