--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,12 @@ dependencies = [
     "aiohttp>=3.9.2",
     "aiofiles>=23.2.1",
     "aiodns>=3.1.1",
+    "fastapi>=0.115.12",
+    "uvicorn>=0.34.2",
+    "pytz>=2025.2",
+    "apscheduler>=3.11.0",
+    "loguru>=0.6.0",
 ]
 
 [project.optional-dependencies]
-test = ["pytest>=7.4.0", "pytest-asyncio>=0.23.4"]
+dependencies = ["celery>=5.5.2"]
