--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,8 @@ urllib3>=2.4.0
 aiohttp>=3.9.2
 aiofiles>=23.2.1
 aiodns>=3.1.1
+fastapi>=0.115.0
+uvicorn>=0.34.2
+pytz>=2025.2
+apscheduler>=3.11.0
+loguru>=0.6.0
