--- a/backend/requirements-backend.txt
+++ b/backend/requirements-backend.txt
@@ -1,38 +1,38 @@
 # FastAPI框架和异步服务器
-fastapi>=0.115.0,<0.116.0
-uvicorn>=0.34.0,<0.35.0
-pydantic>=2.11.0,<2.12.0
-python-multipart>=0.0.9,<0.1.0
-email-validator>=2.1.0,<2.2.0
+fastapi>=0.115.0
+uvicorn>=0.34.0
+pydantic>=2.11.0
+python-multipart>=0.0.9
+email-validator>=2.1.0
 
 # 数据库支持
-sqlalchemy>=2.0.0,<2.1.0
-alembic>=1.13.0,<1.14.0
-mysqlclient>=2.2.0,<2.3.0
-aiomysql>=0.2.0,<0.3.0
-aiosqlite>=0.19.0,<0.20.0
+sqlalchemy>=2.0.0
+alembic>=1.13.0
+mysqlclient>=2.2.0
+aiomysql>=0.2.0
+aiosqlite>=0.19.0
 
 # Redis支持
-redis>=5.0.1,<5.1.0
-aioredis>=2.0.1,<2.1.0
+redis>=5.0.1
+aioredis>=2.0.1
 
 # 安全和身份验证
-python-jose>=3.3.0,<3.4.0
-passlib>=1.7.4,<1.8.0
-bcrypt>=4.1.1,<4.2.0
-python-dotenv>=1.0.0,<1.1.0
-cryptography>=42.0.0,<43.0.0
+python-jose>=3.3.0
+passlib>=1.7.4
+bcrypt>=4.1.1
+python-dotenv>=1.0.0
+cryptography>=42.0.0
 
 # HTTP客户端
-aiohttp>=3.11.0,<3.12.0
-httpx>=0.27.0,<0.28.0
+aiohttp>=3.11.0
+httpx>=0.27.0
 
 # 工具和辅助库
-tomli>=2.0.1,<2.1.0
-pyyaml>=6.0.1,<6.1.0
-python-dateutil>=2.9.0,<2.10.0
-loguru>=0.7.0,<0.8.0
+tomli>=2.0.1
+pyyaml>=6.0.1
+python-dateutil>=2.9.0
+loguru>=0.7.0
 
 # 测试工具
-pytest>=8.0.0,<8.1.0
-pytest-asyncio>=0.23.0,<0.24.0
+pytest>=8.0.0
+pytest-asyncio>=0.23.0
