feat: 后端添加Redis和数据库支持，添加日志配置，更新工具函数包以增强功能

--- a/requirements.txt
+++ b/requirements.txt
@@ -20,3 +20,19 @@ uvicorn>=0.34.2
 pytz>=2025.2
 apscheduler>=3.11.0
 loguru>=0.6.0
+# 添加Redis支持
+aioredis>=2.0.1
+redis>=6.0.0
+# 数据库支持
+sqlalchemy>=2.0.0
+alembic>=1.12.0
+aiomysql>=0.2.0
+aiosqlite>=0.19.0
+# 认证和加密
+python-jose>=3.3.0
+passlib>=1.7.4
+bcrypt>=4.0.1
+# 配置支持
+pydantic>=2.5.0
+pydantic-settings>=2.0.0
+tomli>=2.0.1
