--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,13 @@ dependencies = [
     "pytz>=2025.2",
     "apscheduler>=3.11.0",
     "loguru>=0.6.0",
+    "setuptools>=80.7.1",
+    "redis>=6.1.0",
 ]
 
 [project.optional-dependencies]
 dependencies = ["celery>=5.5.2"]
+
+[tool.setuptools.packages.find]
+where = ["src"]
+include = ["opengewe*"]
