--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,8 +3,9 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "react-router build",
-    "dev": "react-router dev",
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
     "start": "react-router-serve ./build/server/index.js",
     "typecheck": "react-router typegen && tsc"
   },
@@ -17,6 +18,7 @@
     "@mantine/dropzone": "^8.0.1",
     "@mantine/form": "^8.0.1",
     "@mantine/hooks": "^8.0.1",
+    "@mantine/modals": "^8.0.1",
     "@mantine/notifications": "^8.0.1",
     "@mantine/tiptap": "^8.0.1",
     "@react-router/node": "^7.5.3",
@@ -30,15 +32,18 @@
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.4",
     "react-router": "^7.5.3",
+    "react-router-dom": "^7.6.0",
     "zod": "^3.25.3",
     "zustand": "^5.0.4"
   },
   "devDependencies": {
     "@react-router/dev": "^7.5.3",
     "@tailwindcss/vite": "^4.1.4",
+    "@types/lodash": "^4.14.202",
     "@types/node": "^20",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "@vitejs/plugin-react": "^4.4.1",
     "tailwindcss": "^4.1.4",
     "typescript": "^5.8.3",
     "vite": "^6.3.3",
