--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,6 @@
-blinker>=1.9.0
-certifi>=2025.1.31
-charset-normalizer>=3.4.1
-click>=8.1.8
-idna>=3.10
-itsdangerous>=2.2.0
-jinja2>=3.1.6
-markupsafe>=3.0.2
-numpy>=2.2.5
-pilk>=0.2.4
-qrcode>=8.1
-typing-extensions>=4.13.2
-urllib3>=2.4.0
-aiohttp>=3.9.2
-aiofiles>=23.2.1
-aiodns>=3.1.1
-pytz>=2025.2
-apscheduler>=3.11.0
-loguru>=0.6.0
-setuptools>=80.7.1
-redis>=6.1.0
-tomli>=2.0.1
-
-# 可选依赖
-celery>=5.5.2
-sqlalchemy>=2.0.0
-alembic>=1.12.0
-aiomysql>=0.2.0
-aiosqlite>=0.19.0
-python-jose>=3.3.0
-passlib>=1.7.4
-bcrypt>=4.0.1
-pydantic>=2.5.0
-pydantic-settings>=2.0.0
+qrcode
+aiohttp
+pytz
+apscheduler
+loguru
+celery
