--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "opengewe"
 version = "0.0.2"
 description = "基于Gewe和Gewechat的开源微信机器人异步框架，提供高性能的微信自动化解决方案"
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = ">=3.8"
 license = { text = "MIT" }
 authors = [{ name = "Wangnov" }]
 classifiers = [
@@ -11,6 +11,11 @@ classifiers = [
     "Intended Audience :: Developers",
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
     "Topic :: Communications :: Chat",
     "Topic :: Software Development :: Libraries :: Python Modules",
@@ -20,10 +25,11 @@ keywords = ["wechat", "bot", "automation", "geweapi", "weixin", "async"]
 dependencies = [
     "qrcode>=8.1",
     "aiohttp>=3.9.2",
-    "pytz>=2025.2",
-    "apscheduler>=3.11.0",
+    "pytz>=2024.1",
+    "apscheduler>=3.10.0",
     "loguru>=0.6.0",
-    "celery>=5.5.2"
+    "celery>=5.3.0",
+    "tomli>=2.0.0; python_version < '3.11'",
 ]
 
 [project.urls]
@@ -45,14 +51,14 @@ build-backend = "setuptools.build_meta"
 
 [tool.black]
 line-length = 88
-target-version = ["py313"]
+target-version = ["py38", "py39", "py310", "py311", "py312", "py313"]
 
 [tool.isort]
 profile = "black"
 line_length = 88
 
 [tool.mypy]
-python_version = "3.13"
+python_version = "3.8"
 warn_return_any = true
 warn_unused_configs = true
 disallow_untyped_defs = true
