--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-qrcode
-aiohttp
-pytz
-apscheduler
-loguru
-celery
+qrcode>=8.1.0,<9.0.0
+aiohttp>=3.9.2,<4.0.0
+pytz>=2024.1,<2025.0
+apscheduler>=3.10.0,<4.0.0
+loguru>=0.6.0,<0.7.0
+celery>=5.3.0,<6.0.0
 tomli>=2.0.0;python_version<"3.11"
+toml>=0.10.2
