--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,13 +22,17 @@ classifiers = [
 ]
 keywords = ["wechat", "bot", "automation", "geweapi", "weixin", "async"]
 dependencies = [
-    "qrcode>=8.1",
+    "qrcode>=8.1.0",
     "aiohttp>=3.9.2",
     "pytz>=2024.1",
     "apscheduler>=3.10.0",
     "loguru>=0.6.0",
     "celery>=5.3.0",
     "tomli>=2.0.0; python_version < '3.11'",
+    "redis>=6.1.0",
+    "amqp>=5.3.1",
+    "joblib>=1.5.0",
+    "lz4>=4.4.4",
 ]
 
 [project.urls]
@@ -50,7 +54,7 @@ build-backend = "setuptools.build_meta"
 
 [tool.black]
 line-length = 88
-target-version = ["py38", "py39", "py310", "py311", "py312", "py313"]
+target-version = ["py39", "py310", "py311", "py312", "py313"]
 
 [tool.isort]
 profile = "black"
