--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,16 @@
+# OpenGewe 基础依赖
 qrcode>=8.1.0
 aiohttp>=3.9.2
 pytz>=2024.1
 apscheduler>=3.10.0
 loguru>=0.6.0
-celery>=5.3.0
 tomli>=2.0.0;python_version<"3.11"
-toml>=0.10.2
-redis>=6.1.0
-amqp>=5.3.1
-joblib>=1.5.0
-lz4>=4.4.4
+
+# 高级消息队列功能（可选）
+# 如果需要使用advanced模式的消息队列，请取消注释以下依赖
+# 或者使用 pip install opengewe[advanced] 安装
+#celery>=5.3.0
+#redis>=6.1.0
+#amqp>=5.3.1
+#joblib>=1.5.0
+#lz4>=4.4.4
