feat: 开始构建前端，完成前后端登录页面实现。后端添加管理员账号初始化功能，修改bcrypt库的最高版本号限制以解决依赖问题。更新配置文件以包含默认管理员用户名和密码，同时删除冗余的插件验证脚本，优化依赖项以确保兼容性

--- a/main_config_example.toml
+++ b/main_config_example.toml
@@ -60,6 +60,8 @@ secret_key = "your-super-secret-key-change-this-in-production-environment-12345"
 debug = true
 host = "0.0.0.0"
 port = 5432
+admin_username = "admin"
+admin_password = "admin@123"
 
 # 数据库配置 - 仅支持MySQL（需要schema支持）
 [webpanel.database]
