--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "opengewe"
-version = "0.1.1"
+version = "0.2.0"
 description = "基于Gewe和Gewechat的开源微信机器人异步框架，提供高性能的微信自动化解决方案"
 readme = "README.md"
 requires-python = ">=3.9"
@@ -32,17 +32,9 @@ dependencies = [
 
 [project.optional-dependencies]
 # 高级消息队列功能（基于Celery）
-advanced = [
-    "celery>=5.3.0",
-    "redis>=6.1.0",
-    "amqp>=5.3.1",
-]
+advanced = ["celery>=5.3.0", "redis>=6.1.0", "amqp>=5.3.1"]
 # 完整功能（包含所有可选依赖）
-full = [
-    "celery>=5.3.0",
-    "redis>=6.1.0",
-    "amqp>=5.3.1",
-]
+full = ["celery>=5.3.0", "redis>=6.1.0", "amqp>=5.3.1"]
 
 [project.urls]
 Homepage = "https://github.com/Wangnov/opengewe"
