feat(config, api, frontend): 新增插件管理、系统设置两个页面的前后端
在本次提交中，主要进行了以下更改：
- 在main_config_example.toml中，添加了关于初始化机器人的说明，确保用户在首次启动时了解配置的重要性。
- 在backend/app/api/__init__.py中，新增了后台配置管理和插件管理的API路由，增强了系统的管理能力。
- 在frontend/src/App.jsx中，更新了路由配置，添加了Settings和Plugins页面的支持，提升了用户界面的功能性。
- 在frontend/src/index.css中，增加了Markdown样式修复，确保Markdown内容的正确显示。

这些改动提升了系统的可管理性和用户体验，为后续功能扩展奠定了基础。

--- a/main_config_example.toml
+++ b/main_config_example.toml
@@ -1,4 +1,6 @@
 # OpenGewe配置文件
+# 注意：此部分仅在系统首次启动且数据库为空时用于初始化机器人。
+# 初始化完成后，所有机器人管理都应通过Web管理后台进行，修改此文件将不会生效。
 [gewe_apps]
 # 默认设备配置
 [gewe_apps.1]
@@ -32,6 +34,8 @@ app_id = "wx_private_device_id"
 token = "private-token-value"
 is_gewe = false
 
+# 注意：此部分配置在系统首次启动时会迁移到数据库。
+# 后续的插件管理请在Web管理后台的“插件管理”和每个单独机器人的“插件管理”中进行。
 [plugins]
 plugins_dir = "plugins"             # 插件目录
 enabled_plugins = ["ExamplePlugin"] # 全局启用的插件列表，全局启用则全部设备都会加载并启用该插件
