feat(KeywordMonitor, KnowledgeBaseAssistant): 更新插件名称为中文并增强知识库助手功能，修复OpenGewe包内content未分割wxid的问题
在本次提交中，主要进行了以下更改：
- 将`KeywordMonitor`插件的名称更新为“关键词舆情监控”。
- 将`KnowledgeBaseAssistant`插件的名称更新为“知识库助手”，并更新描述以包含@提问者的回复功能。
- 在`KnowledgeBaseAssistant`中新增了命令关键词和知识库内容的配置，提升了插件的功能性和用户交互体验。
- 优化了消息处理逻辑，确保在群聊中能够正确识别发送者信息并进行回复。

这些改动提升了插件的可用性和用户体验，为后续功能扩展奠定了基础。

--- a/plugins/KnowledgeBaseAssistant/config.toml
+++ b/plugins/KnowledgeBaseAssistant/config.toml
@@ -1,2 +1,11 @@
 # KnowledgeBaseAssistant 插件的配置文件
-# 目前无需配置
+
+# 触发机器人的命令关键词
+command_keywords = ["帮助", "知识库", "查询"]
+
+# 知识库内容，格式为 "问题" = "答案"
+[knowledge_base]
+"如何报销" = "请访问 a.com/reimbursement 提交报销申请。"
+"wifi密码" = "公司WiFi密码是 a-b-c-d。"
+"打印机" = "打印机驱动下载地址：a.com/printer-drivers"
+"联系IT" = "IT支持的邮箱是 support@example.com，电话是 12345。"
