feat(ScheduledTaskNotifier): 更新插件功能，支持动态任务管理和持久化存储
在本次提交中，主要进行了以下更改：
- 将`ScheduledTaskNotifier`插件的名称更新为“动态定时任务提醒”，并增强了描述以反映其新功能。
- 实现了通过聊天指令动态添加、管理定时和轮询任务的功能，提升了用户交互体验。
- 所有任务现在保存在`tasks.json`文件中，确保任务在插件重启后不丢失。
- 更新了README文档，详细说明了插件的使用方法和指令格式。

这些改动提升了插件的灵活性和可用性，为用户提供了更好的任务管理工具。

--- a/plugins/ScheduledTaskNotifier/config.toml
+++ b/plugins/ScheduledTaskNotifier/config.toml
@@ -1,15 +1,5 @@
 # ScheduledTaskNotifier 插件的配置文件
 
-# 任务列表
-# to_wxid: 接收者的微信ID（群聊或个人）
-# delay_seconds: 插件启动后多少秒发送
-# message: 要发送的消息内容
-[[tasks]]
-to_wxid = "wxid_mly499mvz23o21"
-delay_seconds = 10
-message = "项目A的周报将于今天下午5点截止，请尽快提交！"
-
-[[tasks]]
-to_wxid = "wxid_mly499mvz23o21"
-delay_seconds = 20
-message = "提醒：明天上午10点有全体会议，请准时参加。"
+# 用于触发任务管理指令的前缀
+# 例如，设置为 "提醒"，则可以通过 "提醒 添加定时 ..." 来创建任务
+command_prefix = "提醒"
