feat(backend, test): 新增后端单元测试，支持从文件加载配置
- 创建 test_config.example.toml 配置模板
- 修改 conftest.py 支持多种配置文件加载方式
- 添加测试文档 README.md 和依赖文件
- 配置 .gitignore 排除敏感配置文件
- 兼容 Python 3.11+ (tomllib) 和早期版本 (tomli)

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@
 __pycache__/
 *.py[cod]
 *$py.class
-test*.py
 .python-version
 
 # 分发与打包
@@ -38,7 +37,10 @@ nosetests.xml
 coverage.xml
 *.cover
 .hypothesis/
-test*.*
+
+# 测试配置
+test_config.toml
+!test_config.example.toml
 
 # 日志
 *.log
@@ -70,6 +72,7 @@ uv.lock
 
 # 配置文件
 main_config.toml
+!main_config.example.toml
 
 # 旧版本文件
 old/
